--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,15 @@
             ],
             "scripts": []
           }
-        }
+        },
+        "deploy": { 
+          "builder": "angular-cli-ghpages:deploy",    
+          "options": {    
+            "baseHref": "https://github.com/hovaroyan/todo-card",    
+            "name": "todo-card",    
+            "email": "hovaroyan@gmail.com"    
+            }    
+          }
       }
     }
   },
